fix list.of() issue