@@ -1,5 +1,7 @@
 package org.hl7.fhir.common.hapi.validation.validator;
 
+import java.util.Arrays;
+
 import org.hl7.fhir.r5.elementmodel.Element;
 import org.hl7.fhir.r5.model.ElementDefinition;
 import org.hl7.fhir.r5.model.StructureDefinition;
@@ -13,6 +15,7 @@ import org.hl7.fhir.r5.utils.validation.constants.ReferenceValidationPolicy;
 import org.hl7.fhir.utilities.validation.ValidationMessage;
 import org.hl7.fhir.validation.instance.advisor.BasePolicyAdvisorForFullValidation;
 
+import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 
@@ -88,7 +91,7 @@ public class FhirDefaultPolicyAdvisor implements IValidationPolicyAdvisor {
 			boolean valid,
 			IMessagingServices msgServices,
 			List<ValidationMessage> messages) {
-		return List.of();
+		return Collections.emptyList();
 	}
 
 	@Override
